--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-            <p>&copy; <span id="year"></span> Your Name. All rights reserved.</p>
+            <p>&copy; <span id="year"></span> ManiRoy. All rights reserved.</p>
         </div>
     </footer>
 
